# bazel-rust-example

./: LICENSE  WORKSPACE
echo/proto/: BUILD.bazel  echo.proto
hello-world/: BUILD.bazel  main.rs
